--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "@typescript-eslint/parser": "^2.0.0",
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.4.0",
+    "dangerously-set-html-content": "^1.0.1",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-loader": "^0.5.5",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-style-loader": "^4.0.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
@@ -55,6 +57,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "tribeman": "file:../tribe"
   }
 }
